add chatGPT api

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 BASIC_AUTH=false
 BASIC_AUTH_USER=user
 BASIC_AUTH_PASSWORD=testtest
+
+OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
