--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.0",
